WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55286
XHTMLMP build broken after
r78342
https://bugs.webkit.org/show_bug.cgi?id=55286
Summary
XHTMLMP build broken after r78342
gil
Reported
2011-02-25 18:58:25 PST
Created
attachment 83915
[details]
webkitgtk build GEN DerivedSources/WebCore/JSCSSImportRule.h trol reaches end of non-void function make[1]: *** [Source/WebCore/dom/libWebCore_la-Document.lo] Error 1 make[1]: Leaving directory `/usr/src/RPM/BUILD/webki GEN DerivedSources/WebCore/JSCSSMediaRule.h GEN DerivedSources/WebCore/JSCSSPageRule.h CXX Source/WebCore/dom/libWebCore_la-DeviceOrientation.lo CXX Source/WebCore/dom/libWebCore_la-DeviceOrientationEvent.lo CXX Source/WebCore/dom/libWebCore_la-Document.lo Source/WebCore/dom/Document.cpp: In member function 'bool WebCore::Document::isXHTMLMPDocument() const': Source/WebCore/dom/Document.cpp:4789:31: error: 'class WebCore::FrameLoader' has no member named 'writer' Source/WebCore/dom/Document.cpp:4790:1: warning: control reaches end of non-void function make[1]: *** [Source/WebCore/dom/libWebCore_la-Document.lo] Error 1 make[1]: Leaving directory `/usr/src/RPM/BUILD/webkit-1.3.12' make: *** [all] Error 2 hello i apologize if i come whenever i have a compilation issue. i thank you for any suggestions you can give me in advance in the attached file shows the full build WebKitGTK with the employee to use. i am using gcc version 4.5.2 gil
Attachments
webkitgtk build
(
deleted
)
2011-02-25 18:58 PST
,
gil
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-02-28 13:26:42 PST
***
Bug 55285
has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 2
2011-02-28 13:27:08 PST
What configure options are you passing or are you using the default options?
gil
Comment 3
2011-03-01 02:14:21 PST
hello these are options passed to configure CFLAGS="%{optflags} -DLIBSOUP_I_HAVE_READ_BUG_594377_AND_KNOW_SOUP_PASSWORD_MANAGER_MIGHT_GO_AWAY" \ %configure \ --enable-geolocation \ --enable-3d-transforms \ --enable-channel-messaging \ --enable-xhtmlmp \ --enable-fast-mobile-scrolling \ --enable-web-sockets \ --enable-filters \ --enable-coverage \ --enable-introspection \ --enable-mathml \ --enable-video \ --enable-jit \ PYTHON=%{__python} %{__python} has the value /usr/bin/python2.6 thanks gil
Martin Robinson
Comment 4
2011-03-01 09:32:25 PST
This looks like some build issues with the XHTMLMP support. As a work-around until this is fixed, simply do not enable XHTMLMP. WebKitGTK+ does not yet have support for 3D transforms.
Martin Robinson
Comment 5
2011-03-03 09:06:02 PST
Committed
r80246
: <
http://trac.webkit.org/changeset/80246
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug