2011-03-03  Martin Robinson  <mrobinson@igalia.com>

XHTMLMP build broken after r78342
        https://bugs.webkit.org/show_bug.cgi?id=55286

        Fix XHTMLMP build now that the DocumentWriter is a member of DocumentLoader
        instead of FrameLoader.

        No new tests. This is a build fix.

        * dom/Document.cpp:
        (WebCore::Document::isXHTMLMPDocument):

Canonical link: https://commits.webkit.org/70141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80246 268f45cc-cd09-0410-ab3c-d52691b4dbfc